# cscn74000-final-project

./: .clang-format-ignore  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  pvs-studio.cfg
cmake/: PVS-Studio.cmake
src/: main.cpp  main.h
src/client/: entry.cpp  main.cpp  main.h
src/common/: logging.cpp  logging.h  packets.cpp  packets.h
src/server/: entry.cpp  main.cpp  main.h
tests/: test_client.cpp  test_logging.cpp  test_packets.cpp  test_server.cpp
